Update bar control button color

--- a/configs/FacebookLite.cfg
+++ b/configs/FacebookLite.cfg
@@ -7,3 +7,6 @@ export TGT_url="\"https://www.facebook.com\""
 export TGT_red="27"
 export TGT_green="62"
 export TGT_blue="136"
+export TGT_btnRed="255"
+export TGT_btnGreen="255"
+export TGT_btnBlue="255"
